--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
         <div class="container">
             <div class="row">
                 <h1>Starcraft Units</h1>
+                </div>
+                <h4>Create unit</h4>
+                <form name="unit">
+                    <p>Pick a type :</p>
+                    <select name="unit_type">
+                        <option>Marine</option>
+                        <option>Valkyrie</option>
+                        <option>Siege Tank</option>
+                    </select>
+                    </br>
+                    <p>Name your unit :</p>
+                    <input type="text" name="unit_name" placeholder="name">
+
+
+                </form>
             </div>
             <!-- This is where you will put your HTML... -->
         </div>
