--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                     <button type="button" onclick="create_unit();">Click Me!</button>
                 </form>
             </div>
+            <table id="tableau">
+                </table>
             <!-- This is where you will put your HTML... -->
         </div>
         <script type="text/javascript" src="/build/app.js"></script>
